# rag_system

./: .gitignore  Cargo.toml  Config.toml  README.MD
src/: main.rs
src/utils/: config.rs
